# silent-template

./: .gitignore  Cargo.toml
api/: Cargo.toml
api/src/: lib.rs  test.rs
common/: Cargo.toml
common/src/: lib.rs  logs.rs  response.rs  server.rs
common/src/database/: migrate.rs  mod.rs
common/src/middlewares/: mod.rs  result_wrapper.rs
common/src/utils/: hasher.rs  mod.rs
config/casbin_conf/: rbac_model.conf
configs/: Cargo.toml
configs/src/: cfgs.rs  get_config.rs
dto/: Cargo.toml
dto/src/: test.rs
entity/: Cargo.toml
migration/: Cargo.toml
public/: index.html
services/: Cargo.toml
services/src/: test.rs
src/: main.rs
