[package]
name = "common"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
publish.workspace = true

[dependencies]
migration = { workspace = true }
configs = { workspace = true }

sea-orm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
silent = { workspace = true, features = ["static"] }
thiserror = { workspace = true }
md5 = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tracing-appender = { workspace = true }
serde_json = { workspace = true }
